Failures of attribute location conformance tests with Metal backend https://bugs.webkit.org/show_bug.cgi?id=220137

Patch by Kyle Piddington <kpiddington@apple.com> on 2021-01-08
Reviewed by Dean Jackson.

* src/compiler/translator/TranslatorMetalDirect/EmitMetal.cpp:
(GenMetalTraverser::emitAttributeDeclaration):
* src/libANGLE/renderer/metal/mtl_glslang_mtl_utils.mm:
(rx::mtl::updateShaderAttributes):
(rx::mtl::GlslangGetMSL):

Canonical link: https://commits.webkit.org/232905@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@271334 268f45cc-cd09-0410-ab3c-d52691b4dbfc